code changed in mygallery file

--- a/mygallery.html
+++ b/mygallery.html
@@ -4,7 +4,7 @@
     <title>My Gallery</title>
     </head>
     <body>
-         <h1>My Gallery</h1>
+         <h1>Bindu Gallery</h1>
          <h2>School Days</h2>
         <img src="img/pics1.jpeg"alt="my gallery"height="200">
          <img src="img/pics2.jpeg"alt="my gallery"height="200">
